# Wisdoverse-Nexus

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  BUDGET_TEAM_PLANNING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXECUTIVE_SUMMARY_R9.md  README.md  README.zh-CN.md  REVIEW_INDEX_R9.md  ROADMAP_QUICK_REF.md  SECURITY.md  SPEC.md  TECH_DEBT_ASSESSMENT_R9.md  clippy.toml  codecov.yml  deny.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  coverage.yml  docs.yml  release.yml  security.yml
.nexis/agents/: architect.yaml  reviewer.json  tester.yaml  workspace-coder.yaml
.nexis/memory/: 2026-03-07.md  2026-03-10.md
apps/mobile/: app.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
crates/nexis-a2a/: Cargo.toml  README.md
crates/nexis-a2a/src/: agent.rs  collaboration.rs  communication.rs  discovery.rs  error.rs  lib.rs
crates/nexis-ai/: Cargo.toml
crates/nexis-ai/src/: lib.rs  registry.rs
crates/nexis-ai/src/a2a/: collaboration.rs  communication.rs  discovery.rs  error.rs  mod.rs
crates/nexis-ai/src/embedding/: mod.rs  openai.rs
crates/nexis-ai/src/mcp/: gemini.rs  mod.rs  registry.rs
crates/nexis-billing/: Cargo.toml
crates/nexis-billing/src/: db.rs  lib.rs  logger.rs  pricing.rs
crates/nexis-calendar/: Cargo.toml  README.md
crates/nexis-calendar/src/: conflict.rs  error.rs  event.rs  lib.rs  reminder.rs  schedule.rs
crates/nexis-cli/: Cargo.toml
crates/nexis-cli/src/: lib.rs  main.rs
crates/nexis-context/: Cargo.toml
crates/nexis-context/benches/: context_summarization.rs
crates/nexis-context/src/: ai_summarizer.rs  error.rs  lib.rs  manager.rs  metrics.rs  summarizer.rs  summarizer_types.rs
crates/nexis-doc/: Cargo.toml  README.md
crates/nexis-doc/benches/: crdt_benchmark.rs
crates/nexis-doc/src/: comment.rs  error.rs  lib.rs  snapshot.rs
crates/nexis-doc/src/crdt/: document.rs  sync.rs  types.rs
crates/nexis-federation/: Cargo.toml
crates/nexis-federation/src/: lib.rs
crates/nexis-gateway/: Cargo.toml
crates/nexis-gateway/benches/: message_throughput.rs  websocket_connections.rs
crates/nexis-gateway/migrations/: 0003_multi_tenant_schema.sql  0004_room_domain_contract.sql
crates/nexis-gateway/src/: lib.rs  main.rs  metrics.rs  observability.rs
crates/nexis-gateway/src/ai/: application.rs  domain.rs  mod.rs
crates/nexis-gateway/src/auth/: mod.rs  tenant.rs
crates/nexis-gateway/src/collaboration/: application.rs  domain.rs  interfaces.rs  mod.rs
crates/nexis-gateway/src/connection/: auth.rs  mod.rs  pool.rs  ws.rs
crates/nexis-gateway/src/crypto/: encryption.rs  key_derivation.rs  mod.rs  tests.rs
crates/nexis-gateway/src/db/: mod.rs
crates/nexis-gateway/src/db/models/: member.rs  mod.rs  tenant.rs  workspace.rs
crates/nexis-gateway/src/error/: api_error.rs  mod.rs
crates/nexis-gateway/src/handlers/: ai.rs  gdpr.rs  mod.rs
crates/nexis-gateway/src/indexing/: queue.rs  retry.rs  service.rs
crates/nexis-gateway/src/middleware/: logging.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs  tenant.rs
crates/nexis-gateway/src/observability/: logging.rs  mod.rs  tracing.rs
crates/nexis-gateway/src/privacy/: application.rs  domain.rs  infrastructure.rs  interfaces.rs  mod.rs
crates/nexis-gateway/src/rooms/: application.rs  domain.rs  infrastructure.rs  interfaces.rs  mod.rs
crates/nexis-gateway/src/router/: mod.rs  openapi.json  ws_router.rs
crates/nexis-gateway/src/search/: application.rs  infrastructure.rs  interfaces.rs  mod.rs  service.rs
crates/nexis-gateway/src/server/: mod.rs
crates/nexis-gateway/src/tracing/: mod.rs  otel.rs
crates/nexis-gateway/tests/: api_integration.rs  boundary_conditions.rs  collaboration_integration.rs  load_test.rs  ws_integration_test.rs
crates/nexis-mcp/: Cargo.toml
crates/nexis-meeting/: Cargo.toml  README.md
crates/nexis-meeting/benches/: sfu_benchmark.rs
crates/nexis-meeting/src/: error.rs  lib.rs  participant.rs  recording.rs  room.rs  summary.rs
crates/nexis-meeting/src/sfu/: mod.rs  router.rs
crates/nexis-memory/: Cargo.toml  README.md
crates/nexis-memory/src/: context.rs  embedding.rs  error.rs  lib.rs  memory.rs
crates/nexis-plugin/: Cargo.toml
crates/nexis-plugin/src/: error.rs  extension_points.rs  lib.rs  manager.rs  plugin.rs
crates/nexis-protocol/: Cargo.toml
crates/nexis-protocol/src/: lib.rs
crates/nexis-protocol/src/identity/: mod.rs
crates/nexis-protocol/src/message/: mod.rs
crates/nexis-protocol/src/permission/: mod.rs
crates/nexis-protocol/src/tenant/: mod.rs
crates/nexis-skills/: Cargo.toml  README.md
crates/nexis-skills/src/: error.rs  executor.rs  lib.rs  registry.rs  skill.rs
crates/nexis-task/: Cargo.toml  README.md
crates/nexis-task/src/: assignment.rs  error.rs  lib.rs  reminder.rs  report.rs  task.rs  workflow.rs
crates/nexis-vector/: Cargo.toml
deploy/: .env.example  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
docker/: Dockerfile.gateway
docs/: BACKLOG.md  GAP_ANALYSIS.md  PROGRESS.md  index.md  package-lock.json  package.json  performance.md
docs-src/: book.toml
docs-src/src/: SUMMARY.md  api-reference.md  index.md
docs/.vitepress/: config.ts
docs/api/: openapi.yaml  reference.md
docs/architecture/: review-2026-02-23.md
docs/deployment/: README.md  guide.md
docs/design/: phase6-collaboration-design.md
k8s/: gateway.yaml
protocol/: nexis-id.md  nexis-mcp.md  nexis-msg.md
scripts/: coverage.sh  e2e_test.sh
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/examples/: usage.py
sdk/python/nexis/: __init__.py  client.py  models.py  websocket.py
tests/: collaboration_test.rs  integration_openai.rs
(+189 files in other folders)
