[package]
name = "nexis-ai"
description = "Nexis AI runtime - providers, A2A protocol, and MCP integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
dotenvy = "0.15"
futures = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

nexis-protocol = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
mockall = { workspace = true }
nexis-meeting = { workspace = true }
nexis-doc = { workspace = true }
nexis-task = { workspace = true }
nexis-calendar = { workspace = true }


