[package]
name = "nexis-billing"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Async billing & request logging for Wisdoverse Nexus"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = "0.11"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"
