[package]
name = "nexis-meeting"
description = "Wisdoverse Nexus meeting and video collaboration domain types"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "sfu_benchmark"
harness = false
