[package]
name = "nexis-memory"
description = "Wisdoverse Nexus long-term memory and context persistence"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]
