[package]
name = "nexis-plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin system for Nexis gateway"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
