[package]
name = "nexis-plugin"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"
description = "Plugin system for Wisdoverse Nexus gateway"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
