[package]
name = "nexis-protocol"
description = "Nexis protocol definitions - NIP-001, NIP-002, NIP-003"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }

[features]
default = []
full = ["multi-tenant"]
multi-tenant = []

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
