[project]
name = "wisdoverse-nexus-sdk"
version = "0.1.0"
description = "Python SDK for Wisdoverse Nexus API"
requires-python = ">=3.10"
license = {text = "LicenseRef-Wisdoverse-Nexus-BSL-1.1"}
dependencies = [
    "httpx>=0.28.1",
    "websockets>=16.0",
    "pydantic>=2.13.3",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
